--- a/dev/pug/index.jade
+++ b/dev/pug/index.jade
@@ -10,8 +10,10 @@ block content
 		main.content
 			.Stan-Smith-sneakers
 				p Stan Smith sneakers made in vintage-look suede.
+			.Empty-Box1
 			.The-Stan-Smith-debut
 				p The Stan Smith debuted as a pro-level tennis sneaker in the '70s. It wasn't long before its crisp, clean aesthetic made it a crossover favorite off the court. These men's shoes update the timeless look with a suede upper. Featuring perforated 3-Stripes and the iconic rubber cupsole.
+			.Empty-Box2
 			.-Suede-upper-Perf
 				ul 
 					li Suede upper  
@@ -21,5 +23,4 @@ block content
 					li Logo on heel tab  
 					li Rubber cupsole  
 					li Imported
-			.clearfix
 	include sections/footer.jade
