--- a/dev/scss/main.scss
+++ b/dev/scss/main.scss
@@ -1,17 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:900');
-//@import url('https://fonts.googleapis.com/css?family=Lato');
 
 html {
-  font-family: "Lato", "Lato-Regular"  sans-serif;
+  font-family: "Lato", sans-serif;
 }
-
-//body {
-  //display: flex;
-  //min-height: 100vh;
-  //align-items: center;
-  //justify-content: center;
-  //border: 2px solid gray;
-//}
 
 .Casual-01-PDP {
   width: 100%;
@@ -19,6 +10,11 @@ html {
   background-color: #ffffff;
   background-color: var(--white);
   //border: 2px solid gray;
+}
+
+.content {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .Stan-Smith-sneakers {
@@ -29,8 +25,6 @@ html {
   font-weight: 900;
   line-height: 1.25;
   text-align: left;
-  float: left;
-  margin-right: 79px;
   color: #222222;
   box-sizing: border-box;
   //border: 2px solid gray;
@@ -44,9 +38,16 @@ html {
   line-height: 1.63;
   text-align: left;
   color: #222222;
-  float: left;
   box-sizing: border-box;
-  //border: 2px solid gray;
+}
+
+.Empty-Box1 {
+  height: 130px;
+  width: 79px;
+}
+
+.Empty-Box2 {
+  width: 614px;
 }
 
 .-Suede-upper-Perf {
@@ -58,14 +59,7 @@ html {
   line-height: 1.63;
   text-align: left;
   color: #222222;
-  float: left;
-  margin-left: 613px;
   box-sizing: border-box;
-  //border: 2px solid gray;
-}
-
-.clearfix {
-	clear: both;
 }
 
 ul {
@@ -78,6 +72,20 @@ li {
     &::before {
       content: "•";
       margin: 0 1em 0 0;
-    }
+              }
    }
+}
+
+footer {
+  width: 100%;
+  height: 17px;
+  //top: 262px;
+  margin-top: 262px;
+  margin-bottom: 122px;
+  font-family: Lato;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 3.5px;
+  text-align: center;
+  color: #aaaaaa;
 }
