--- a/dev/scss/main.scss
+++ b/dev/scss/main.scss
@@ -9,7 +9,7 @@ html {
   height: 100%;
   background-color: #ffffff;
   background-color: var(--white);
-  //border: 2px solid gray;
+  padding: 0 186px 0 180px;
 }
 
 .content {
@@ -27,7 +27,6 @@ html {
   text-align: left;
   color: #222222;
   box-sizing: border-box;
-  //border: 2px solid gray;
 }
 
 .The-Stan-Smith-debut {
@@ -88,4 +87,37 @@ footer {
   letter-spacing: 3.5px;
   text-align: center;
   color: #aaaaaa;
+}
+
+.Pure {
+  width: 87px;
+  height: 29px;
+  font-family: Lato;
+  font-size: 24px;
+  font-weight: 900;
+  letter-spacing: 6px;
+  text-align: left;
+  color: #222222;
+  padding: 6px 0 4px 0;
+  margin: 9px 0 10px 20px;
+  
+}
+
+.My-menu {
+  width: 100%;
+  height: 48px;
+  display: flex;
+  border-bottom: 1px solid gray;
+  
+}
+
+.Women-Men-Kids-Sport {
+  width: 335px;
+  height: 19px;
+  font-family: Lato;
+  font-size: 16px;
+  text-align: left;
+  color: #222222;
+  margin: 15px 0 14px 0;
+  align-self: center;
 }
