--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,7 +7,8 @@ html {
   width: 100%;
   height: 100%;
   background-color: #ffffff;
-  background-color: var(--white); }
+  background-color: var(--white);
+  padding: 0 186px 0 180px; }
 
 .content {
   display: -webkit-box;
@@ -82,3 +83,36 @@ footer {
   letter-spacing: 3.5px;
   text-align: center;
   color: #aaaaaa; }
+
+.Pure {
+  width: 87px;
+  height: 29px;
+  font-family: Lato;
+  font-size: 24px;
+  font-weight: 900;
+  letter-spacing: 6px;
+  text-align: left;
+  color: #222222;
+  padding: 6px 0 4px 0;
+  margin: 9px 0 10px 20px; }
+
+.My-menu {
+  width: 100%;
+  height: 48px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  border-bottom: 1px solid gray; }
+
+.Women-Men-Kids-Sport {
+  width: 335px;
+  height: 19px;
+  font-family: Lato;
+  font-size: 16px;
+  text-align: left;
+  color: #222222;
+  margin: 15px 0 14px 0;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  align-self: center; }
