--- a/dev/pug/sections/header.jade
+++ b/dev/pug/sections/header.jade
@@ -2,5 +2,21 @@ header
 	.My-menu
 		.Pure
 			h3 PURE
-		.Women-Men-Kids-Sport
-			h3 Women Kids Sports Brands
+		.Women-Men-Kids-Sport-Brands
+			a(href="#") Women
+			|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			a(href="#") Men
+			|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			a(href="#") Kids
+			|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			a(href="#") Sports
+			|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			a(href="#") Brands
+		.Search
+			h3 Search...
+		.Log-in-My-cart
+			.My-cart
+				h3 My cart
+			.Log-in
+				h3 Log in
+			
