--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,8 +7,10 @@ html {
   width: 100%;
   height: 100%;
   background-color: #ffffff;
-  background-color: var(--white);
-  padding: 0 186px 0 180px; }
+  background-color: var(--white); }
+
+body {
+  margin: 0 186px 0 180px; }
 
 .content {
   display: -webkit-box;
@@ -97,22 +99,71 @@ footer {
   margin: 9px 0 10px 20px; }
 
 .My-menu {
+  position: relative;
   width: 100%;
   height: 48px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  border-bottom: 1px solid gray; }
+  border-bottom: 1px solid gray;
+  -webkit-box-align: baseline;
+  -webkit-align-items: baseline;
+  -ms-flex-align: baseline;
+  align-items: baseline; }
 
-.Women-Men-Kids-Sport {
+.Women-Men-Kids-Sport-Brands {
   width: 335px;
   height: 19px;
   font-family: Lato;
   font-size: 16px;
   text-align: left;
   color: #222222;
-  margin: 15px 0 14px 0;
+  margin: 15px 0 7px 40px;
   -webkit-align-self: center;
   -ms-flex-item-align: center;
   align-self: center; }
+
+.Search {
+  width: 59px;
+  height: 19px;
+  font-family: Lato;
+  font-size: 16px;
+  text-align: left;
+  color: #888888;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  align-self: center;
+  margin: 15px 0 7px 61px; }
+
+.Log-in-My-cart {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+  -webkit-flex-direction: row-reverse;
+  -ms-flex-direction: row-reverse;
+  flex-direction: row-reverse; }
+
+.Log-in {
+  width: 50px;
+  height: 19px;
+  font-family: Lato;
+  font-size: 16px;
+  text-align: right;
+  color: #222222; }
+
+.My-cart {
+  width: 60px;
+  height: 19px;
+  font-family: Lato;
+  font-size: 16px;
+  text-align: right;
+  color: #222222;
+  margin: 0 0 0 32px; }
+
+A:link {
+  text-decoration: none; }
