--- a/dev/scss/main.scss
+++ b/dev/scss/main.scss
@@ -1,167 +1,2 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:900');
-
-html {
-  font-family: "Lato", sans-serif;
-}
-
-.Casual-01-PDP {
-  width: 100%;
-  height: 100%;
-  background-color: #ffffff;
-  background-color: var(--white);
-}
-
-body {
-  margin: 0 186px 0 180px;
-}
-
-.content {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.Stan-Smith-sneakers {
-  width: 535px;
-  height: 100px;
-  font-family: Lato;
-  font-size: 40px;
-  font-weight: 900;
-  line-height: 1.25;
-  text-align: left;
-  color: #222222;
-  box-sizing: border-box;
-}
-
-.The-Stan-Smith-debut {
-  width: 460px;
-  height: 130px;
-  font-family: Lato;
-  font-size: 16px;
-  line-height: 1.63;
-  text-align: left;
-  color: #222222;
-  box-sizing: border-box;
-}
-
-.Empty-Box1 {
-  height: 130px;
-  width: 79px;
-}
-
-.Empty-Box2 {
-  width: 614px;
-}
-
-.-Suede-upper-Perf {
-  width: 480px;
-  height: 182px;
-  margin-top: 15px;
-  font-family: Lato;
-  font-size: 16px;
-  line-height: 1.63;
-  text-align: left;
-  color: #222222;
-  box-sizing: border-box;
-}
-
-ul {
-  list-style: none;
-  font-size: 0;
-  padding: 0;
-  margin: 0;
-li {
-  font-size: 1rem;
-    &::before {
-      content: "•";
-      margin: 0 1em 0 0;
-              }
-   }
-}
-
-footer {
-  width: 100%;
-  height: 17px;
-  //top: 262px;
-  margin-top: 262px;
-  margin-bottom: 122px;
-  font-family: Lato;
-  font-size: 14px;
-  font-weight: bold;
-  letter-spacing: 3.5px;
-  text-align: center;
-  color: #aaaaaa;
-}
-
-.Pure {
-  width: 87px;
-  height: 29px;
-  font-family: Lato;
-  font-size: 24px;
-  font-weight: 900;
-  letter-spacing: 6px;
-  text-align: left;
-  color: #222222;
-  padding: 6px 0 4px 0;
-  margin: 9px 0 10px 20px;
-}
-
-.My-menu {
-  position: relative;
-  width: 100%;
-  height: 48px;
-  display: flex;
-  border-bottom: 1px solid gray;
-  align-items: baseline;
-}
-
-.Women-Men-Kids-Sport-Brands {
-  width: 335px;
-  height: 19px;
-  font-family: Lato;
-  font-size: 16px;
-  text-align: left;
-  color: #222222;
-  margin: 15px 0 7px 40px;
-  align-self: center;
-  
-}
-
-.Search {
-  width: 59px;
-  height: 19px;
-  font-family: Lato;
-  font-size: 16px;
-  text-align: left;
-  color: #888888;
-  align-self: center;
-  margin: 15px 0 7px 61px;
-}
-
-.Log-in-My-cart {
-  display: flex;
-  width: 100%;
-  flex-direction: row-reverse;
-}
-
-.Log-in {
-  width: 50px;
-  height: 19px;
-  font-family: Lato;
-  font-size: 16px;
-  text-align: right;
-  color: #222222;
-}
-
-.My-cart {
-  width: 60px;
-  height: 19px;
-  font-family: Lato;
-  font-size: 16px;
-  text-align: right;
-  color: #222222;
-  margin: 0 0 0 32px;
-}
-
-A:link { 
-  text-decoration: none; 
-}
+@import "common/reset";
+@import "common/main";
