--- a/dev/pug/index.jade
+++ b/dev/pug/index.jade
@@ -7,6 +7,24 @@ block content
 	include sections/header.jade
 	.Casual-01-PDP
 		main.content
+			.rectangle
+				img(src="img/adidas.jpg")
+			.-levels
+				.Level-1
+					span Home 
+					|&nbsp;&nbsp;  
+					img(src="img/arrow.png")
+					|&nbsp;&nbsp; 
+				.Level-2
+					span Men
+					|&nbsp;&nbsp; 
+					img(src="img/arrow.png") 
+					|&nbsp;&nbsp; 
+				.Level-3
+					span Shoes
+			.cazylight-boost-low
+				span Crazylight Boost Low 2016 Shoes
+
 			.Stan-Smith-sneakers
 				p Stan Smith sneakers made in vintage-look suede.
 			.Empty-Box1
