--- a/dev/pug/sections/header.jade
+++ b/dev/pug/sections/header.jade
@@ -16,7 +16,10 @@ header
 			h3 Search...
 		.Log-in-My-cart
 			.My-cart
-				h3 My cart
+				a(href="#") My cart
+				.notification
+					span 2
 			.Log-in
-				h3 Log in
+				a(href="#") Log in
+
 			
