--- a/dev/scss/common/main.scss
+++ b/dev/scss/common/main.scss
@@ -5,9 +5,8 @@ html {
 }
 
 .Casual-01-PDP {
-  width: 100%;
-  height: 100%;
-  background-color: #ffffff;
+  //width: 100%;
+  //height: 100%;
   background-color: var(--white);
 }
 
@@ -23,23 +22,16 @@ body {
 .Stan-Smith-sneakers {
   width: 535px;
   height: 100px;
-  font-family: Lato;
   font-size: 40px;
   font-weight: 900;
   line-height: 1.25;
-  text-align: left;
-  color: #222222;
   box-sizing: border-box;
 }
 
 .The-Stan-Smith-debut {
   width: 460px;
   height: 130px;
-  font-family: Lato;
-  font-size: 16px;
   line-height: 1.63;
-  text-align: left;
-  color: #222222;
   box-sizing: border-box;
 }
 
@@ -56,11 +48,7 @@ body {
   width: 480px;
   height: 182px;
   margin-top: 15px;
-  font-family: Lato;
-  font-size: 16px;
   line-height: 1.63;
-  text-align: left;
-  color: #222222;
   box-sizing: border-box;
 }
 
@@ -84,7 +72,6 @@ footer {
   //top: 262px;
   margin-top: 262px;
   margin-bottom: 122px;
-  font-family: Lato;
   font-size: 14px;
   font-weight: bold;
   letter-spacing: 3.5px;
@@ -95,11 +82,9 @@ footer {
 .Pure {
   width: 87px;
   height: 29px;
-  font-family: Lato;
   font-size: 24px;
   font-weight: 900;
   letter-spacing: 6px;
-  text-align: left;
   color: #222222;
   padding: 6px 0 4px 0;
   margin: 9px 0 10px 20px;
@@ -117,9 +102,7 @@ footer {
 .Women-Men-Kids-Sport-Brands {
   width: 335px;
   height: 19px;
-  font-family: Lato;
   font-size: 16px;
-  text-align: left;
   color: #222222;
   margin: 15px 0 7px 40px;
   align-self: center;
@@ -129,9 +112,7 @@ footer {
 .Search {
   width: 59px;
   height: 19px;
-  font-family: Lato;
   font-size: 16px;
-  text-align: left;
   color: #888888;
   align-self: center;
   margin: 15px 0 7px 61px;
@@ -146,22 +127,67 @@ footer {
 .Log-in {
   width: 50px;
   height: 19px;
-  font-family: Lato;
-  font-size: 16px;
-  text-align: right;
-  color: #222222;
 }
 
 .My-cart {
   width: 60px;
   height: 19px;
-  font-family: Lato;
-  font-size: 16px;
-  text-align: right;
-  color: #222222;
   margin: 0 0 0 32px;
 }
 
 A:link { 
   text-decoration: none; 
+}
+
+.notification {
+  position: relative;
+  z-index: 1;
+  background-color: blue;
+  width: 11px;
+  height: 11px;
+  border-radius: 50%;
+  margin-top: -20px;
+  margin-left: 50px;
+  font-size: 10px;
+  text-align: center;
+  color: #ffffff;
+}
+
+.rectangle {
+  margin: 39px 43px 82px 0;
+  box-sizing: border-box;
+}
+
+.-levels {
+  width: 150px;
+  height: 17px;
+  display: flex;
+  margin: 40px 0 0 0;
+
+}
+
+.Level-1 {
+  font-size: 14px;
+  color: #888888;
+}
+
+.Level-2 {
+  font-size: 14px;
+  color: #888888;
+}
+
+.Level-3 {
+  font-size: 14px;
+  color: #222222;
+}
+
+.сazylight-boost-low {
+  font-size: 40px;
+  font-weight: 900;
+  line-height: 1.25;
+  width: 467px;
+  height: 100px;
+  //text-align: left;
+  color: #222222;
+  box-sizing: border-box;
 }
