--- a/dev/pug/index.jade
+++ b/dev/pug/index.jade
@@ -7,37 +7,34 @@ block content
 	include sections/header.jade
 	.Casual-01-PDP
 		main.content
-			.rectangle
-				img(src="img/adidas.jpg")
-			.-levels
-				.Level-1
-					span Home 
-					|&nbsp;&nbsp;  
-					img(src="img/arrow.png")
-					|&nbsp;&nbsp; 
-				.Level-2
-					span Men
-					|&nbsp;&nbsp; 
-					img(src="img/arrow.png") 
-					|&nbsp;&nbsp; 
-				.Level-3
-					span Shoes
-			.cazylight-boost-low
-				span Crazylight Boost Low 2016 Shoes
-
-			.Stan-Smith-sneakers
-				p Stan Smith sneakers made in vintage-look suede.
-			.Empty-Box1
-			.The-Stan-Smith-debut
-				p The Stan Smith debuted as a pro-level tennis sneaker in the '70s. It wasn't long before its crisp, clean aesthetic made it a crossover favorite off the court. These men's shoes update the timeless look with a suede upper. Featuring perforated 3-Stripes and the iconic rubber cupsole.
-			.Empty-Box2
-			.-Suede-upper-Perf
-				ul 
-					li Suede upper  
-					li Perforated 3-Stripes; Stan Smith logo on tongue  
-					li Leather lining  
-					li Enjoy the comfort and performance of OrthoLite® sockliner  
-					li Logo on heel tab  
-					li Rubber cupsole  
-					li Imported
+			.product-details
+				.image
+					img(src="img/adidas.jpg")
+				.breadcrumbs
+					.Level-1
+						span Home 
+						|&nbsp;&nbsp;  
+						img(src="img/arrow.png") 
+						|&nbsp;&nbsp;
+					.Level-2
+						span Men
+						|&nbsp;&nbsp; 
+						img(src="img/arrow.png") 
+						|&nbsp;&nbsp; 
+					.Level-3
+						span Shoes
+				h1.crazylight-boost-low Crazylight Boost Low 2016 Shoes
+			
+			.about
+				h2 Stan Smith sneakers made in&nbsp;vintage-look suede.
+				.text
+					p The Stan Smith debuted as a pro-level tennis sneaker in the '70s. It wasn't long before its crisp, clean aesthetic made it a crossover favorite off the court. These men's shoes update the timeless look with a suede upper. Featuring perforated 3-Stripes and the iconic rubber cupsole.
+					ul 
+						li Suede upper 
+						li Perforated 3-Stripes; Stan Smith logo on tongue 
+						li Leather lining
+						li Enjoy the comfort and performance of OrthoLite® sockliner 
+						li Logo on heel tab
+						li Rubber cupsole
+						li Imported
 		include sections/footer.jade
