--- a/dev/scss/common/main.scss
+++ b/dev/scss/common/main.scss
@@ -1,12 +1,21 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:900');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,900');
+
+$width-left: 570px;
+$width-right: 460px;
 
 html {
   font-family: "Lato", sans-serif;
+  line-height: 1.63;
+  font-size: 16px;
+}
+
+h1, h2 {
+  line-height: 1.25;
+  font-size: 40px;
+  font-weight: 900;
 }
 
 .Casual-01-PDP {
-  //width: 100%;
-  //height: 100%;
   background-color: var(--white);
 }
 
@@ -17,53 +26,6 @@ body {
 .content {
   display: flex;
   flex-wrap: wrap;
-}
-
-.Stan-Smith-sneakers {
-  width: 535px;
-  height: 100px;
-  font-size: 40px;
-  font-weight: 900;
-  line-height: 1.25;
-  box-sizing: border-box;
-}
-
-.The-Stan-Smith-debut {
-  width: 460px;
-  height: 130px;
-  line-height: 1.63;
-  box-sizing: border-box;
-}
-
-.Empty-Box1 {
-  height: 130px;
-  width: 79px;
-}
-
-.Empty-Box2 {
-  width: 614px;
-}
-
-.-Suede-upper-Perf {
-  width: 480px;
-  height: 182px;
-  margin-top: 15px;
-  line-height: 1.63;
-  box-sizing: border-box;
-}
-
-ul {
-  list-style: none;
-  font-size: 0;
-  padding: 0;
-  margin: 0;
-li {
-  font-size: 1rem;
-    &::before {
-      content: "•";
-      margin: 0 1em 0 0;
-              }
-   }
 }
 
 footer {
@@ -153,12 +115,12 @@ A:link {
   color: #ffffff;
 }
 
-.rectangle {
+.image {
   margin: 39px 43px 82px 0;
   box-sizing: border-box;
 }
 
-.-levels {
+.breadcrumbs {
   width: 150px;
   height: 17px;
   display: flex;
@@ -181,7 +143,7 @@ A:link {
   color: #222222;
 }
 
-.сazylight-boost-low {
+.crazylight-boost-low {
   font-size: 40px;
   font-weight: 900;
   line-height: 1.25;
