--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,8 @@
-@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
 */
-@import url("https://fonts.googleapis.com/css?family=Lato:900");
+@import url("https://fonts.googleapis.com/css?family=Lato:400,900");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -29,9 +28,6 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block; }
 
-body {
-  line-height: 1; }
-
 ol, ul {
   list-style: none; }
 
@@ -48,7 +44,14 @@ table {
   border-spacing: 0; }
 
 html {
-  font-family: "Lato", sans-serif; }
+  font-family: "Lato", sans-serif;
+  line-height: 1.63;
+  font-size: 16px; }
+
+h1, h2 {
+  line-height: 1.25;
+  font-size: 40px;
+  font-weight: 900; }
 
 .Casual-01-PDP {
   background-color: var(--white); }
@@ -64,48 +67,6 @@ body {
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap; }
-
-.Stan-Smith-sneakers {
-  width: 535px;
-  height: 100px;
-  font-size: 40px;
-  font-weight: 900;
-  line-height: 1.25;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
-
-.The-Stan-Smith-debut {
-  width: 460px;
-  height: 130px;
-  line-height: 1.63;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
-
-.Empty-Box1 {
-  height: 130px;
-  width: 79px; }
-
-.Empty-Box2 {
-  width: 614px; }
-
-.-Suede-upper-Perf {
-  width: 480px;
-  height: 182px;
-  margin-top: 15px;
-  line-height: 1.63;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
-
-ul {
-  list-style: none;
-  font-size: 0;
-  padding: 0;
-  margin: 0; }
-  ul li {
-    font-size: 1rem; }
-    ul li::before {
-      content: "•";
-      margin: 0 1em 0 0; }
 
 footer {
   width: 100%;
@@ -199,12 +160,12 @@ A:link {
   text-align: center;
   color: #ffffff; }
 
-.rectangle {
+.image {
   margin: 39px 43px 82px 0;
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
-.-levels {
+.breadcrumbs {
   width: 150px;
   height: 17px;
   display: -webkit-box;
@@ -225,7 +186,7 @@ A:link {
   font-size: 14px;
   color: #222222; }
 
-.сazylight-boost-low {
+.crazylight-boost-low {
   font-size: 40px;
   font-weight: 900;
   line-height: 1.25;
@@ -234,3 +195,25 @@ A:link {
   color: #222222;
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
+
+.product-details button {
+  background: blue; }
+
+.about {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  width: 100%; }
+  .about .text {
+    width: 460px; }
+  .about h2 {
+    width: 570px; }
+  .about ul {
+    margin-top: 15px;
+    list-style: disc;
+    padding-left: 1.2em; }
