--- a/dev/pug/index.jade
+++ b/dev/pug/index.jade
@@ -9,22 +9,54 @@ block content
 		main.content
 			.product-details
 				.image
-					img(src="img/adidas.jpg")
-				.breadcrumbs
-					.Level-1
-						span Home 
-						|&nbsp;&nbsp;  
-						img(src="img/arrow.png") 
-						|&nbsp;&nbsp;
-					.Level-2
-						span Men
-						|&nbsp;&nbsp; 
-						img(src="img/arrow.png") 
-						|&nbsp;&nbsp; 
-					.Level-3
-						span Shoes
-				h1.crazylight-boost-low Crazylight Boost Low 2016 Shoes
-			
+					img(src="img/beige.jpg")
+				.configuration
+					.breadcrumbs
+						.Level-1
+							a(href="#") Home 
+							|&nbsp;&nbsp;>&nbsp;&nbsp;
+						.Level-2
+							a(href="#") Men
+							|&nbsp;&nbsp;>&nbsp;&nbsp; 
+						.Level-3
+							span Shoes
+					h1.crazylight-boost-low Crazylight Boost Low 2016 Shoes
+					.cost
+						span $9.90
+					.color
+						span Color
+					.buttons
+						button
+							img(src="img/beige.jpg")
+						button
+							img(src="img/green.jpg")
+					.size
+						span Size
+					.size-selector
+						table
+							tr
+								.choose
+									td 4
+								td 4.5
+								td 5
+								td 5.5
+								td 6
+								td 6.5
+								td 7
+							tr
+								td 7.5
+								td 8
+								td 8.5
+								td 9
+								td 9.5
+								td 10
+								td 10.5
+							tr
+								td 11
+								td 11.5
+								td 12
+								td 12.5
+								td 13
 			.about
 				h2 Stan Smith sneakers made in&nbsp;vintage-look suede.
 				.text
