--- a/dev/scss/index/product-details.scss
+++ b/dev/scss/index/product-details.scss
@@ -1,5 +1,77 @@
 .product-details {
+	display: flex;
+
+	.image {
+		margin: 39px 43px 82px 0;
+		width:: 569px;
+  		height: 660px;
+}
+
+	img {
+  		width: 569px;
+  		height: 660px;
+}
+
+	.crazylight-boost-low {
+		font-size: 40px;
+		font-weight: 900;
+		line-height: 1.25;
+		width: 467px;
+		height: 100px;
+}
+
+	.breadcrumbs {
+  		width: 150px;
+  		height: 17px;
+  		display: flex;
+  		margin: 40px 0 25px 0;
+}
+
+.configuration {
+	display: flex;
+	flex-direction: column;
+}
+
+.color {
+  font-weight: 900;
+  margin-bottom: 11px; 
+}
+
+.size {
+  font-weight: 900;
+  margin-top: 30px;
+  margin-bottom: 12px;
+}
+
+.size-selector {
+	width: 274px;
+	height: 97px;
+}
+
+table {
+	font-size: 14px;
+	text-align: center;
+}
+
+td {
+	width: 34px;
+	height: 17px;
+	padding: 0 6px 19px 0;
+}
+
+.buttons {
+
+}
+
+.choose {
+	position: relative;
+	background-color: red;
+	border-radius: 50%;
+	z-index: -1;
+}
+
 	button {
 		@extend %button;
 	}
 }
+
