--- a/dev/scss/ui/button.scss
+++ b/dev/scss/ui/button.scss
@@ -1,4 +1,15 @@
 %button {
-	background: blue; 
+	width: 60px;
+  	height: 63px;
+  	//box-sizing: border-box;
+  	border: 0;
+  	margin-right: 6px;
+
+  img {
+  	width: 60px;
+  	height: 63px;
+  	vertical-align: middle;
+  	opacity: 0.75; 
+} 
 
 }
