--- a/public/css/main.css
+++ b/public/css/main.css
@@ -160,20 +160,6 @@ A:link {
   text-align: center;
   color: #ffffff; }
 
-.image {
-  margin: 39px 43px 82px 0;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
-
-.breadcrumbs {
-  width: 150px;
-  height: 17px;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 40px 0 0 0; }
-
 .Level-1 {
   font-size: 14px;
   color: #888888; }
@@ -186,18 +172,79 @@ A:link {
   font-size: 14px;
   color: #222222; }
 
-.crazylight-boost-low {
-  font-size: 40px;
-  font-weight: 900;
-  line-height: 1.25;
-  width: 467px;
-  height: 100px;
-  color: #222222;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
+.cost {
+  font-size: 24px;
+  margin: 12px 0 47px; }
 
 .product-details button {
-  background: blue; }
+  width: 60px;
+  height: 63px;
+  border: 0;
+  margin-right: 6px; }
+  .product-details button img {
+    width: 60px;
+    height: 63px;
+    vertical-align: middle;
+    opacity: 0.75; }
+
+.product-details {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+  .product-details .image {
+    margin: 39px 43px 82px 0;
+    width: 569px;
+    height: 660px; }
+  .product-details img {
+    width: 569px;
+    height: 660px; }
+  .product-details .crazylight-boost-low {
+    font-size: 40px;
+    font-weight: 900;
+    line-height: 1.25;
+    width: 467px;
+    height: 100px; }
+  .product-details .breadcrumbs {
+    width: 150px;
+    height: 17px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 40px 0 25px 0; }
+  .product-details .configuration {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .product-details .color {
+    font-weight: 900;
+    margin-bottom: 11px; }
+  .product-details .size {
+    font-weight: 900;
+    margin-top: 30px;
+    margin-bottom: 12px; }
+  .product-details .size-selector {
+    width: 274px;
+    height: 97px; }
+  .product-details table {
+    font-size: 14px;
+    text-align: center; }
+  .product-details td {
+    width: 34px;
+    height: 17px;
+    padding: 0 6px 19px 0; }
+  .product-details .choose {
+    position: relative;
+    background-color: red;
+    border-radius: 50%;
+    z-index: -1; }
 
 .about {
   display: -webkit-box;
